Microcontroladores/Projeto Multplex Relogio/.metadata/.plugins/org.eclipse.cdt.ui/Relogio.build.log
19:32:47 **** Incremental Build of configuration Debug for project Relogio ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L053xx -c -I../Core/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:112:3: warning: implicit declaration of function 'HAL_TIM_Base_Start_IT'; did you mean 'HAL_DMA_Start_IT'? [-Wimplicit-function-declaration]
  112 |   HAL_TIM_Base_Start_IT(&htim6);
      |   ^~~~~~~~~~~~~~~~~~~~~
      |   HAL_DMA_Start_IT
../Core/Src/main.c:112:26: error: 'htim6' undeclared (first use in this function)
  112 |   HAL_TIM_Base_Start_IT(&htim6);
      |                          ^~~~~
../Core/Src/main.c:112:26: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

19:32:48 Build Failed. 2 errors, 1 warnings. (took 885ms)

